# AutomaticDeploymentSystem

./: .gitignore  .project  README.md  i2c.h  temp.h
.jxbrowser.userdata/: Local State  Module Info Cache
.jxbrowser.userdata/Default/: Current Session  History  History Provider Cache  History-journal  Last Session  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links
.jxbrowser.userdata/Local Storage - EXT/: http_127.0.0.1.localstorage
.launches/: uss.launch
.metadata/: version.ini
Debug/: ccsObjs.opt  i2c.d  main.d  makefile  subdir_rules.mk  subdir_vars.mk  temp.d  uss.map  uss.out  uss_linkInfo.xml
UnderwaterSensorSystem/: .ccsproject  .cproject  .project  main.c  temp.c
UnderwaterSensorSystem/.launches/: UnderwaterSensorSystem.launch
UnderwaterSensorSystem/Debug/: UnderwaterSensorSystem.map  UnderwaterSensorSystem.out  UnderwaterSensorSystem_linkInfo.xml  ccsObjs.opt  main.d  makefile  sources.mk  subdir_rules.mk
UnderwaterSensorSystem/clock/: clock.c  clock.h
UnderwaterSensorSystem/i2c/: i2c.c  i2c.h
UnderwaterSensorSystem/power/: power.c  power.h
UnderwaterSensorSystem/pressure/: MS5837_30BA.c  MS5837_30BA.h  pressure.c  pressure.h
UnderwaterSensorSystem/rs232/: icl3221.c  icl3221.h
src/Drum_relay_system/: .gitignore  CMakeLists.txt  README.rst  prj.conf
src/Drum_relay_system/src/: main.c
src/Drum_relay_system/src/bluetooth/: bluetooth.c  bluetooth.h
src/Drum_relay_system/src/gpio/: battery.c  battery.h  leds.c  leds.h
src/Drum_relay_system/src/rs485/: rs485.c  rs485.h  uart.c  uart.h
(+237 files in other folders)
